# popsicle-sale

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
popsicle_sale/: __init__.py  hooks.py  modules.txt
popsicle_sale/accounts/doctype/pos_invoice_merge_log/: pos_invoice_merge_log.py
popsicle_sale/fixtures/: custom_field.json
popsicle_sale/popsicle_sale/custom/: warehouse.json
popsicle_sale/popsicle_sale/doctype/purchase_order_template/: purchase_order_template.js  purchase_order_template.json  purchase_order_template.py  test_purchase_order_template.py
popsicle_sale/popsicle_sale/doctype/purchase_order_template_item/: purchase_order_template_item.json  purchase_order_template_item.py
popsicle_sale/popsicle_sale/page/mobile_point_of_sale/: mobile_point_of_sale.js  mobile_point_of_sale.json  pos_controller.js  pos_item_cart.js  pos_item_details.js  pos_item_selector.js  pos_number_pad.js  pos_pagination_toolbar.js  pos_past_order_list.js  pos_past_order_summary.js  pos_payment.js
popsicle_sale/popsicle_sale/workspace/popsicle_daily/: popsicle_daily.json
popsicle_sale/public/js/: mobile-point-of-sale.bundle.js  stock_entry.js  warehouse.js
popsicle_sale/public/scss/: mobile-point-of-sale.bundle.scss  popsicle-sale.bundle.scss
popsicle_sale/templates/includes/: splash_screen.html
